--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 spring.application.name=FactorySystemWeb
 
-spring.datasource.url=jdbc:mysql://localhost:3306/factory_system
-spring.datasource.username=root
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/factory_system
+spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/factory_system
+#spring.datasource.username=root
+
 spring.datasource.password=1920
 
 app.jwt.secret=Polytech is the BEST tecgnical univercity
