Добавил выдачу задач и карту для выдачи

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.datasource.password=1920
 
 app.jwt.secret=Polytech is the BEST tecgnical univercity
 app.jwt.expiration=86400000
+
+spring:
+    cache:
+        type: caffeine
+        caffeine:
+            spec: maximumSize=1000,expireAfterWrite=10m
